--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>HTML 5 Boilerplate</title>
+        <title>Professional Simulation</title>
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
         <main id="main">
-            <h1>Kaki szimuláció</h1>
+            <h1>Profi kaki szimuláció</h1>
             <div class="btn-container">
                 <button>Start</button>
             </div>
